# code

./: CMakeLists.txt  ReadMe.txt  change_name.sh  make.sh
common/: CMakeLists.txt
common/inc/: skl_common_queue.h  skl_common_uart.h  soft_common_queue.h  soft_common_uart.h
common/inc/skl_xml/: mxml-private.h  skl_common_xml.h
common/inc/soft_xml/: mxml-private.h  mxml_config.h  soft_common_xml.h
common/skl_json/: cJSON.c
common/skl_queue/: skl_common_queue.c  skl_queue.h
common/skl_uart/: skl_common_uart.c
common/skl_xml/: mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-search.c  mxml-set.c  mxml-string.c  skl_common_xml.c
common/soft_json/: cJSON.c
common/soft_queue/: soft_common_queue.c  soft_queue.h
common/soft_uart/: soft_common_uart.c
common/soft_xml/: mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-search.c  mxml-set.c  mxml-string.c  soft_common_xml.c
config/: config.h.in
public/: config.h  skl_public.h  soft_public.h
src/: CMakeLists.txt  skl_vehicle_main.c  soft_vehicle_main.c
src/inc/: skl_access_common.h  skl_stor_common.h  soft_access_common.h  soft_stor_common.h
src/skl_access/: CMakeLists.txt
src/skl_access/inc/: skl_access.h
src/skl_access/inc/skl_gb_uart/: skl_access_gb_uart.h
src/skl_access/src/: skl_access.c
src/skl_access/src/skl_gb_uart/: skl_access_gb_uart.c
src/skl_stor/: CMakeLists.txt
src/skl_stor/inc/: skl_stor.h
src/skl_stor/inc/cfg/: skl_stor_cfg.h
src/skl_stor/src/: skl_stor.c
src/skl_stor/src/cfg/: skl_stor_cfg.c
src/soft_access/: CMakeLists.txt
src/soft_access/inc/: soft_access.h
src/soft_access/inc/soft_gb_uart/: soft_access_gb_uart.h
src/soft_access/src/: soft_access.c
src/soft_access/src/soft_gb_uart/: soft_access_gb_uart.c
src/soft_stor/: CMakeLists.txt
src/soft_stor/inc/: soft_stor.h
src/soft_stor/inc/cfg/: soft_stor_cfg.h
src/soft_stor/src/: soft_stor.c
src/soft_stor/src/cfg/: soft_stor_cfg.c
