MESSAGE(STATUS "Enter: " ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/common/inc")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/public")

if (CONFIG_COMMON_UART)
    AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/skl_uart UART_SRCS)
endif (CONFIG_COMMON_UART)

if (CONFIG_COMMON_QUEUE)
    AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/skl_queue QUEUE_SRCS)
endif (CONFIG_COMMON_QUEUE)

if (CONFIG_COMMON_MXML)
    AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/skl_xml MXML_SRCS)
endif (CONFIG_COMMON_MXML)

if (CONFIG_COMMON_JSON)
    AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/skl_json JSON_SRCS)
endif (CONFIG_COMMON_JSON)

#FILE(GLOB_RECURSE SRC_LISTS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

SET(SRC_LISTS ${UART_SRCS} ${QUEUE_SRCS} ${MXML_SRCS} ${JSON_SRCS})

ADD_LIBRARY(common SHARED ${SRC_LISTS})

