MESSAGE(STATUS "Enter: " ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/public)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/inc)

ADD_SUBDIRECTORY(skl_access)
ADD_SUBDIRECTORY(skl_stor)

AUX_SOURCE_DIRECTORY(. SRCS)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SRCS})

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} common sklaccess sklstor)

