MESSAGE(STATUS "Enter: " ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/common/inc")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/public")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/inc")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/skl_access/inc")

FILE(GLOB_RECURSE SRC_LISTS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

#MESSAGE(STATUS "sklaccess SRC_LISTS " ${SRC_LISTS})

ADD_LIBRARY(sklaccess SHARED ${SRC_LISTS})

