MESSAGE(STATUS "Enter: " ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/common/inc")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/public")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/inc")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/soft_stor/inc")

FILE(GLOB_RECURSE SRC_LISTS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(softstor SHARED ${SRC_LISTS})

